--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
   "author": "LiJohnson",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.13.4",
-    "socket.io": "^1.4.5",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
+    "express": "^4.13.4",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "socket.io": "^1.4.5",
+    "yargs": "^4.3.2"
   }
 }
