有待研究stream转发

--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
     "webClient" : "client",
-    "serverClient" : "server"
+    "serverClient" : "server",
+    "login" : "source  ~/.profile"
 }
