--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "~1.13.2",
+    "child_pty": "^3.0.1",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "^4.13.4",
@@ -21,6 +22,8 @@
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
     "socket.io": "^1.4.5",
+    "socket.io-stream": "^0.9.0",
+    "terminal.js": "^1.0.7",
     "yargs": "^4.3.2"
   }
 }
